--- a/style.css
+++ b/style.css
@@ -5,15 +5,38 @@
     }
 }
 
+@font-face {
+    font-family: "Afacad Flux";
+    src: url("assets/AF.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+.AF1 {
+    font-family: "Afacad Flux", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-optical-sizing: auto;
+    font-variation-settings: "slnt" 0;
+}
+
+.AF2 {
+    font-family: "Afacad Flux", sans-serif;
+    font-weight: 800;
+    color: #ffffff;
+    font-style: normal;
+    font-optical-sizing: auto;
+    font-variation-settings: "slnt" 0;
+}
 
 body{
     overflow-x: hidden;
     align-items: center;
 }
 header {
-    color: #7f7fff; 
-    background-color: #b2b2ff;
-    padding: 20px;   
+    color: #a70000; 
+    background-color: #a70000;
+    padding: 15px;   
 }
 
 .navbar-bg {
@@ -24,6 +47,7 @@ header {
 
 .navbar {
     color: #a70000; 
+    height: 30px;
     padding: 1rem 2rem; 
 }
 
@@ -37,6 +61,13 @@ header {
     color: #ffd700; 
     transform: scale(1.05); 
 }
+
+.navbar-logo {
+    height: 30px;
+    margin-right: 30px;
+    vertical-align: middle;
+}
+
 
 .nav-link {
     font-weight: 500; 
@@ -73,7 +104,11 @@ header {
         padding: 0.5rem; 
 }
 
-#Flowers {
+#Models {
+    text-align: center; 
+}
+
+#Buy {
     text-align: center; 
 }
 
@@ -125,13 +160,13 @@ header {
     margin-top: 2rem
 }
 
-#Flowers {
+#Models {
     background-color: #929292; 
     padding: 20px; 
 }
 
-#Flower-Price {
-    background-color: #f2cee7; 
+#Buy {
+    background-color: #333; 
     padding: 20px;
 }
 
@@ -246,13 +281,13 @@ h2 {
   }
   
   @media (max-width: 1200px) {
-    #testimonials {
+    #reviews {
       padding: 30px 20px;
     }
   }
   
   @media (max-width: 768px) {
-    #testimonials {
+    #reviews {
       padding: 20px 15px;
     }
   
@@ -267,7 +302,7 @@ h2 {
   }
   
   @media (max-width: 576px) {
-    #testimonials {
+    #reviews {
       padding: 15px 10px;
     }
   
@@ -303,7 +338,7 @@ h1, h2, h3, h5 {
     height: auto; 
 }
 
-#Flowers {
+#Models {
     padding: 2rem 0; 
 }
 
@@ -319,7 +354,7 @@ h1, h2, h3, h5 {
     padding: 2rem 0; 
 }
 
-#About {
+#Contact Us {
     padding: 3rem 0; 
 }
 
@@ -336,7 +371,7 @@ footer {
         width: 100%; 
     }
 
-    #Flowers .row {
+    #Models .row {
         flex-direction: column; 
         align-items: center; 
     }
@@ -376,7 +411,7 @@ footer {
 }
 
 .btn-primary:hover {
-    background-color: #ff69b4;
+    background-color: #333;
 }
 
 .star-rating {
